--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ GEOSERVER_ADMIN_PASSWORD=your_password_here
 GEOSERVER_PORT=8080
 GEOSERVER_WORKSPACE=urban_climate_workspace
 GEOSERVER_HOST=geoserver
+
+POSTGRES_USER=postgres_user
+POSTGRES_PASSWORD=postgres_password
+POSTGRES_DB=UCA_DB
+POSTGRES_PORT=5432
